[tool.poetry]
name = "de1-flow-calibration-estimation"
version = "0.1.0"
description = ""
authors = ["Eddie"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "3.6.2"
scipy = "^1.9.3"
numpy = "^1.26"
requests = "2.28.1"
jupyter = "1.0.0"
jupyter-notebookparams = "0.0.4"
ipympl = "0.9.2"
nb-clean = "2.4.0"
setuptools = "<60" # As per numpy recommendations at https://numpy.org/doc/stable/reference/distutils_status_migration.html#numpy-setuptools-interaction


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
